Fix website elements spacing
This includes removing unnecessary <br/> elements in favour of margins.

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -1,3 +1,6 @@
+/* ########################################################## */
+/* ################### Main definitions ##################### */
+
 @font-face {
     font-family: 'Cascadia Code PL';
     src: url('CascadiaCodePL.ttf') format('truetype'),
@@ -37,6 +40,10 @@ body {
 	font-size: 120%;
 }
 
+
+/* ########################################################## */
+/* ########################## IDs ########################### */
+
 #copyMailDev:hover,#copyTelegram:hover,#copyDiscord:hover{
 	color: #aaa;
 	cursor: pointer;
@@ -58,10 +65,24 @@ body {
 
 #index {
 	font-size: 142%;
-	margin-bottom: 20px;
+	margin-top: 35px;
+	margin-bottom: 0px;
 	color: #36bf16;
 }
 
+#footerTop {
+	margin-top: 30px;
+}
+
+#footerBottom {
+	margin-bottom: 60px;
+}
+
+
+/* ########################################################## */
+/* ####################### Classes ########################## */
+
+/* center content */
 .content {
 	display: flex;
 	flex-direction: column;
@@ -122,10 +143,14 @@ body {
 .tinyTitle {
 	font-size:130%;
 	color: #3391ff;
+	margin-top: 30px;
 }
 
 .aboutLine {
-	margin: 10px 0px;
+	margin-top: 12px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
 .blinking {
@@ -139,6 +164,19 @@ body {
 .footer {
 	margin: 10px;
 }
+
+.break {
+	margin-top: 20px;
+	margin-bottom: 0px;
+}
+
+.biggerBreak {
+	margin-top: 45px;
+	margin-bottom: 0px;
+}
+
+/* ########################################################## */
+/* ############# Animations and responsivity ################ */
 
 @keyframes blinking {
     0% {
